--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -31,6 +31,7 @@
       "@klassroom/client/pages/space/teacher/students": [
         "libs/client/pages/space/teacher/students/src/index.ts"
       ],
+      "@klassroom/client/store/space": ["libs/client/store/space/src/index.ts"],
       "@klassroom/client/store/space-teacher-students": [
         "libs/client/store/space-teacher-students/src/index.ts"
       ]
