--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^9.1.1",
     "@nestjs/cqrs": "^9.0.4",
     "@nestjs/graphql": "^11.0.6",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/microservices": "^9.4.2",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.1.1",
